--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           Open section 1</p></div>
       </a>
 
-      <a class="card" href="pages/2.HTML">
+      <a class="card" href="pages/2.HTMl">
         <img src="pages/images2/S2.png" alt="S2" onerror="this.src='data:image/svg+xml;utf8,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%2276%22 height=%2276%22><rect width=%2276%22 height=%2276%22 fill=%22%23dfeaff%22/></svg>'">
         <div class="meta"><h4>
           
