Integrate advertisement scripts and update content
Added scripts for advertisement integration and updated content.

--- a/pages/1.Html
+++ b/pages/1.Html
@@ -101,7 +101,16 @@ The breaking point came when Hemeti rejected the proposed timeline to integrate 
 
 ---
 
-Deeper Causes
+Deeper Causes<script type="text/javascript">
+	atOptions = {
+		'key' : 'f7d637adcd3cd82649debe3056583926',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/f7d637adcd3cd82649debe3056583926/invoke.js"></script>
 
 Beneath the military confrontation lie complex economic and geopolitical factors.
 Sudan is rich in gold and fertile land, and its location on the Red Sea makes it a strategic prize for regional powers. The competition for control over these resources and key state institutions has fueled the conflict and deepened divisions among rival elites.
@@ -133,7 +142,18 @@ Regional and international efforts to broker a lasting ceasefire continue, but n
 
 Conclusion
 The war in Sudan is not merely a clash between two armies—it is a complex confrontation over power, wealth, and geography, intertwined with regional rivalries. While civilians bear the heaviest cost, Sudan’s fate ultimately depends on whether its leaders—and regional players like the UAE—recognize that in such a war, there can be no true victor, only devastation.
-  .</p>
+<script type="text/javascript">
+	atOptions = {
+		'key' : 'f7d637adcd3cd82649debe3056583926',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/f7d637adcd3cd82649debe3056583926/invoke.js"></script>
+
+.</p>
 
 <p><a href="../index.html" class="back" data-i18n="back">← Back to home</a></p>
 
