Update content and add advertisement scripts
Added JavaScript for ad options and updated content regarding Hakim Ziyech's future with the Moroccan national team.

--- a/pages/5.HTML
+++ b/pages/5.HTML
@@ -81,7 +81,16 @@
   <img src="images2/S5.png" alt="Section 5 image" onerror="this.style.opacity='0.4'">
 </div>
 
-<p>هل سيقبل حكيم زياش دعوة وليد الركراكي؟ بين الإشاعات والحقيقة
+<p>هل سيقبل حكيم زياش دعوة وليد الركراكي؟ بين الإشاع<script type="text/javascript">
+	atOptions = {
+		'key' : 'f7d637adcd3cd82649debe3056583926',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/f7d637adcd3cd82649debe3056583926/invoke.js"></script>ات والحقيقة
 
 تتزايد في الآونة الأخيرة التساؤلات حول مستقبل النجم المغربي حكيم زياش مع المنتخب الوطني المغربي، خاصة بعد تداول أنباء على مواقع التواصل الاجتماعي تشير إلى نيته الاعتزال الدولي، عقب انتقاله إلى صفوف الوداد الرياضي خلال فترة الانتقالات الأخيرة.
 
@@ -103,12 +112,34 @@
 
 خاتمة: بين الاعتزال والطموح المستمر
 
+<script type="text/javascript">
+	atOptions = {
+		'key' : 'f7d637adcd3cd82649debe3056583926',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/f7d637adcd3cd82649debe3056583926/invoke.js"></script>
+
 يبقى مستقبل حكيم زياش مع المنتخب الوطني المغربي رهينًا بالاختيارات التقنية القادمة، ومدى رغبته في الاستمرار على المستوى الدولي. فرغم كل ما يقال عن اعتزاله، يؤكد مقربون منه أنه لا يزال يحمل في داخله طموح تمثيل الوطن، خصوصًا بعد قراره المفاجئ بالعودة إلى البطولة الوطنية.
 
 وفي انتظار ما ستسفر عنه قوائم الركراكي القادمة، يبقى السؤال مفتوحًا أمام الجماهير:
 هل سيرتدي حكيم زياش قميص "أسود الأطلس" مجددًا، أم أن صفحة الدولي المغربي قد طُويت نهائيًا؟
   
-</p>
+</p><script type="text/javascript">
+	atOptions = {
+		'key' : 'f7d637adcd3cd82649debe3056583926',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/f7d637adcd3cd82649debe3056583926/invoke.js"></script>
+
+
 
 <p><a href="../index.html" class="back" data-i18n="back">← Back to home</a></p>
 
