Move AdSense meta tag into a div
Moved the Google AdSense meta tag inside a new div.

--- a/index.html
+++ b/index.html
@@ -100,8 +100,10 @@
  
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4406680234402951"
      crossorigin="anonymous"></script>
-  <meta name="google-adsense-account" content="ca-pub-4406680234402951">
 
+  <div>
+  <meta name="google-adsense-account" content="ca-pub-4406680234402951">
+  </div>
   
 </head>
 <body>
