Integrate Google AdSense into 4.HTML
Added Google AdSense meta tag and script for ads.

--- a/pages/4.HTML
+++ b/pages/4.HTML
@@ -69,8 +69,14 @@
       text-decoration: underline;
     }
   </style>
+<div>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4406680234402951"
      crossorigin="anonymous"></script>
+</div>
+  <div>
+  <meta name="google-adsense-account" content="ca-pub-4406680234402951">
+  </div>
+
 
 </head>
 <body>
